#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(teachserver, 1.0, bb.newlife@gmail.com)
AC_CONFIG_SRCDIR([twomapT.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(teachserver, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.
#AC_CHECK_LIB([pthread glog dl rt])
# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h memory.h netinet/in.h string.h sys/file.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([ftruncate memset select socket strerror])

AC_OUTPUT(Makefile)
